--- a/src/main/res/layout/choose_area.xml
+++ b/src/main/res/layout/choose_area.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#fff">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -18,6 +17,8 @@
             android:textSize="20sp"/>
         <Button
             android:id="@+id/back_button"
+            android:text="返回"
+            android:textColor="#000"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginLeft="10dp"
