--- a/src/main/res/layout/choose_area.xml
+++ b/src/main/res/layout/choose_area.xml
@@ -17,7 +17,7 @@
             android:textSize="20sp"/>
         <Button
             android:id="@+id/back_button"
-            android:text="返回"
+            android:background="@mipmap/back"
             android:textColor="#000"
             android:layout_width="25dp"
             android:layout_height="25dp"
