--- a/src/main/res/layout/title.xml
+++ b/src/main/res/layout/title.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_weather"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    tools:context="com.coolweather.com.coolweather.WeatherActivity">
+    android:layout_height="?attr/actionBarSize">
+    <Button
+        android:id="@+id/nav_button"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentLeft="true"
+        android:background="@mipmap/home"/>
 
     <TextView
         android:id="@+id/title_city"
