增加后台跟新数据，基本完成

--- a/src/main/res/layout/aqi.xml
+++ b/src/main/res/layout/aqi.xml
@@ -65,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/pm25_text"
                 android:textSize="40sp"
+                android:textColor="#fff"
                 android:layout_gravity="center"/>
                 <TextView
                     android:layout_width="wrap_content"
